# embedded-savegame

./: Cargo.toml  README.md
src/: chksum.rs  eeprom24x.rs  lib.rs  mock.rs  storage.rs  w25q.rs
