[package]
name = "embedded-savegame"
version = "0.2.0"
description = "Savegame library for embedded with powerfail-safety and wear leveling"
repository = "https://github.com/kpcyrd/embedded-savegame"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
arrayref = "0.3.9"
crc32fast = { version = "1.5.0", default-features = false }
eeprom24x = { version = "0.7.2", optional = true }
eh0 = { package = "embedded-hal", version = "0.2.7", optional = true }
w25q = { version = "0.2.9", optional = true }

[features]
eeprom24x = ["dep:eeprom24x"]
mock = []
w25q = ["dep:w25q", "dep:eh0"]
